--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.5"
+requests = "*"
 Flask = ">=0.12.2"
 Flask-RESTful = ">=0.3.6"
 flask-restful-swagger-2 = ">=0.35"
