Fix project name.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "spdx_poetry_demo"
+name = "spdx-poetry-demo"
 version = "0.1.0"
 description = "A small example package"
 authors = ["Pratik Karanje <lfpratik@linuxfoundation.org>"]
